# bazel_transition_bug_report_example

./: .gitignore  MODULE.bazel  maven_install.json
example/: A.java  B.java  BUILD
tools/lombok/: BUILD  transition.bzl
